--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,10 @@ fastapi==0.109.2
 
 pyyaml==6.0.1
 websockets==12.0
+
+vital-agent-template>=0.1.0
+vital-ai-vitalsigns>=0.1.19
+vital-ai-domain>=0.1.7
+vital-ai-aimp>=0.1.6
+
+
